--- a/CSS/miestilo.css
+++ b/CSS/miestilo.css
@@ -1,12 +1,12 @@
 header{
-    background: rgb(234, 238, 238);
-    border: 1px solid rgb(49, 49, 49);
+    background: #ffb5f9;
+    border: 1px solid rgb(255, 255, 255);
     padding: 20 px;
     text-align:  center
 }
 
 nav{
-    background-color: rgb(174, 174, 174);
+    background-color: rgb(112, 254, 245);
     padding: 5px 15 px;
 
 }
@@ -35,8 +35,8 @@ aside{
     width: 20%;
     margin: 20px 0px;
     padding: 20px;
-    background:  #090909;
-    color: white;
+    background:  #fe94dd;
+    color: rgb(0, 0, 0);
     text-align: :justify;
 
     
@@ -46,18 +46,18 @@ aside{
 }
 
 article{
-    background: #151515;
-    border: 1px solid rgb(251, 249, 249);
+    background: #fac5ff;
+    border: 1px solid rgb(246, 50, 190);
     padding: 20px;
     margin-bottom: 15px;
-    color: white;
+    color: rgb(1, 0, 0);
 }
 
 footer{
     clear: both;
     text-align: center;
     padding: 20px;
-    border: 2px solid rgb(252, 250, 250);
+    border: 2px solid rgb(255, 255, 255);
 
 }
 
@@ -68,7 +68,7 @@ article img{
 
 article footer{
     text-align: right;
-    border-top: 2px solid rgb(8, 8, 8)
+    border-top: 2px solid rgb(0, 0, 0)
 }
 
 
